crates/strider/tests/snapshots/v3__x64__calling_convention__mixed_4.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x401300:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "8" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "8" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "10" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "14" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "14" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="Neg\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v11" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v20" [label="Post Call\nRDI", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v20" [color="#888888", style=dashed];
  "v20" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nRSI", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v21" [color="#888888", style=dashed];
  "v21" -> "15" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "9" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "22" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="Post Call\nRCX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v23" [color="#888888", style=dashed];
  "v23" -> "9" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "16" -> "9" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "1" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" -> "22" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v25" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v25" [color="#888888", style=dashed];
  "v25" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="arg[3] ← RCX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← RSI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← RDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "26" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x401574:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "29" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "31" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "26" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x40402c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "33" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "34" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "31" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x404030:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "36" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "6" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "37" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "34" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x40402c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "39" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "5" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "40" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "37" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x404030:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "42" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
