crates/strider/tests/snapshots/v3__x64__calling_convention__sink8.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nXMM1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "7" -> "3" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "8" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="arg[7] ← ram[sp + 16]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "10" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "11" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "11" [label="arg[6] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "12" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="arg[5] ← R9D", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="arg[4] ← R8D", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="arg[3] ← ECX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="arg[1] ← ESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="arg[0] ← RDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "23" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xfffffffffffffffc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "27" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
